[Feature #166240823] Resolve copnflicts with develop
