# src/api/controllers/authController.js
@@ -1,12 +1,9 @@
 import bcrypt, { hashSync, genSaltSync } from 'bcrypt';
 import models from '../models/index';
 import generateToken from '../../helpers/tokens/generate.token';
-import mailer from '../../helpers/Mailer';
-import environnement from '../../configs/environments';
 import sendResult from '../../helpers/results/send.auth';
 
 const { User } = models;
-const env = environnement.currentEnv;
 
 /**
  * containing all user's model controllers (signup, login)
@@ -31,7 +28,7 @@ export default class Auth {
     const user = await User.create({
       username,
       email,
-      password: hashedPassword,
+      password: hashedPassword
     });
     const tokenData = { username, email };
     const token = generateToken(tokenData, process.env.TOKEN_KEY);
@@ -62,94 +59,8 @@ export default class Auth {
         });
       }
       return res.status(404).json({
-        message: 'user doesn\'t exist'
+        message: "user doesn't exist"
       });
     });
-  }
-
-  /**
-   * A controller to send an email to a user
-   * requesting password recovery
-   *
-   * @param {Object} req - the request object
-   * @param {Object} res - the result object
-   * @returns {Boolean} true
-   */
-  static async sendRecoveryEmail(req, res) {
-    // Initialising variables
-    const result = {};
-    const status = 200;
-    const userEmail = req.body.email;
-    const username = 'premices';
-
-    await mailer(`Password recovery for ${userEmail}`,
-      'Password recovery',
-      userEmail,
-      'notifications',
-      {
-        email: userEmail,
-        link: `${env.baseUrl}/api/auth/reset`,
-        userName: username,
-        buttonText: 'RESET',
-        message: 'You are recieving this email beacause you\'ve requested the recovery '
-           + 'of your Authors Heaven password. Kindly click the button bellow.'
-      });
-
-    // Sending the result
-    result.status = status;
-    result.message = 'Password reset instructions have been sent '
-       + 'to your account\'s primary email address. If you don\'t find it, check your spams';
-    res.status(status).json(result);
-  }
-
-  /**
-   * A controller update the users email
-   *
-   * @param {Object} req - the request object
-   * @param {Object} res - the result object
-   * @returns {Boolean} true
-   */
-  static async updatePassword(req, res) {
-    // Initialising variables
-    const result = {};
-    const status = 200;
-    const userEmail = req.params.email;
-    const userPassword = req.body.password;
-
-    await User.update({
-      password: userPassword
-    }, {
-      where: {
-        email: userEmail,
-      }
-    });
-
-    // Sending the result
-    result.status = status;
-    result.message = 'Password reset sucessfully';
-    res.status(status).json(result);
-  }
-
-  /**
-   * A controller to send an approval to the user to
-   * reset the password
-   *
-   * @param {Object} req - the request object
-   * @param {Object} res - the result object
-   * @returns {Boolean} true
-   */
-  static async verifyRecoveryLink(req, res) {
-    // Initialising variables
-    const result = {};
-    const status = 200;
-    const { userEmail } = req;
-
-    // Sending the result
-    result.status = status;
-    result.message = 'Please provide your new password';
-    result.data = {
-      email: userEmail,
-    };
-    res.status(status).json(result);
   }
 }
