# src/api/routes/index.js
@@ -1,16 +1,10 @@
 import express from 'express';
-<<<<<<< HEAD
-import dbTestRouter from './db.test';
-=======
->>>>>>> [Ft #166240818] send a valid token to the user
 import authRouter from './authRouter';
+import resetRouter from './password.reset';
 
 const router = express();
 
-<<<<<<< HEAD
-router.use('/dbTest', dbTestRouter);
-=======
->>>>>>> [Ft #166240818] send a valid token to the user
 router.use('/auth', authRouter);
+router.use('/reset', resetRouter);
 
 export default router;
